--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@types/styled-components": "^5.1.34",
     "axios": "^1.7.3",
+    "eventemitter3": "^5.0.1",
     "expo": "~51.0.26",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
